# Account-manager

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_10_1135-8b15a24a2b23_init.py
db/: accdb.db
nginx/: Dockerfile
nginx/config/: nginx.conf.template
scss/: _account.scss  _auth.scss  _base.scss  _fonts.scss  _fotter.scss  _header.scss  _popup.scss  _reset.scss  _search_widget.scss  _utils.scss  styles.scss
scss/accounts/: _account-base.scss  _account-create.scss  _account-edit.scss
src/: main.py
src/apps/accounts/: __init__.py  managers.py  router.py  schemas.py  utils.py
src/apps/auth/: managers.py  middlewares.py  router.py  schemas.py  utils.py
src/apps/docs/: __init__.py  router.py  utils.py
src/core/: ctx_proc.py  lifespan.py  middlewares.py  routers.py  settings.py  utils.py
src/database/: base.py  mixins.py  tps.py  utils.py
src/env/: .env.template
src/exceptions/: __init__.py  exceptions.py  handlers.py
static/: openapi.json
static/css/: styles.css  styles.css.map
static/css/docs/: base.css
static/js/: config.js  utils.js
static/js/account/: acc.js  edit.js  export.js  search.js  upload.js
static/js/auth/: auth.js  reg.js
static/js/popup/: popup.js
templates/: base.html  footer.html  head.html  header.html  main.html  not-found.html
templates/accounts/: account-base.html  account-create.html  account-details.html  account-home.html  account-read.html  account-templates.html  search-result.html
templates/auth/: login-form.html  register-form.html
(+6 files in other folders)
