[tool.poetry]
name = "accdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
jinja2 = "^3.1.4"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
cryptography = "^42.0.8"
hypercorn = "^0.17.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-pie = "^0.16.0"
mypy = "^1.4.1"
pep8-naming = "^0.13.3"
pylint = "^2.17.5"
flake8-black = "^0.3.6"
flake8-use-pathlib = "^0.3.0"
flake8-print = "^5.0.0"
flake8-scream = "^0.1.0"
flake8-simplify = "^0.20.0"
flake8-expression-complexity = "^0.0.11"
flake8-eradicate = "^1.5.0"
flake8-commas = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-builtins = "^2.1.0"
flake8-annotations = "^3.0.1"
flake8-annotations-coverage = "^0.0.6"
flake8-adjustable-complexity = "^0.0.6"
flake8-json = "^23.7.0"
alembic = "^1.13.2"

[tool.black]
line-length = 90
target-version = ['py312']
extend-exclude = '''
(
  migrations   # Django DB migrations
)
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/versions/*"]
src_paths = ["./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
